# NetMonitor

./: .gitignore  README.md  ROADMAP.md  criar_etiquetas.sh  install_linux.sh  monitor_net.py  pyproject.toml  rescrita-tecnica-angular.md  run_monitor.sh  working-plan.md
.bmad-core/: core-config.yaml  install-manifest.yaml
archived/: .gitignore  .pre-commit-config.yaml  Makefile  criar_issues.sh  monitor_config.ini  monitor_net.py
archived/tests/: test_monitor_net.py
docs/: POST-MVP-ROADMAP.md  architecture.md  prd.md
docs/prd/: epic-2.theme-system.md
docs/stories/: 1.0.regression-test-suite.md  1.1.project-scaffolding-configuration.md  1.2.core-monitoring-service-implementation.story.md  1.2.development-workflow-integration-and-frontend-configuration.story.md  1.2.validation-report.md  1.3.implement-network-monitoring-logic.story.md  1.3.integrate-ping-persistence-into-monitorservice.md  1.3.user-interface-implementation-home-screen.story.md  1.4.implement-tab-based-navigation-structure.md  1.4.production-build-configuration-and-verification.story.md  2.1.create-settings-service-and-data-model.md  2.1.css-variable-refactoring.story.md  2.2.implement-monitoring-configuration-section.md  2.2.theme-toggle-and-persistence.story.md  3.1.github-actions-cicd-configuration.story.md  3.2.mobile-release-build-pipeline.story.md  3.3.v1.0-final-verification.story.md
netmonitor/: package-lock.json  package.json
netmonitor/electron/: main.js
netmonitor/src/: global.scss  index.html
netmonitor/src-tauri/: Cargo.toml  tauri.conf.json
tests/: test_monitor_net.py
(+31 files in other folders)
